# sovereign_os_dim

./: .gitattributes  .gitignore  CLAUDE.md  README.md  VERSION  bridge.py  build.bat  build.py  main.py  pyproject.toml  requirements.txt
.github/: topics.yml
.github/workflows/: test.yml
backend/: __init__.py  api.py  audit.py  bridge.py  data_processor.py  fastapi_app.py  structure.py  workflow.py
backend/ml/: __init__.py  extract_safe_features.py  parse_atih_specs.py  predict.py  synthetic.py  train.py
backend/ml/data/: atih_specs_2026.json  real_features.csv  synthetic_train.parquet
backend/ml/models/: collision_risk.json  ddn_validity.json  format_classes.json  training_metadata.json
docs/design/sentinel-refonte/: README.md
docs/design/sentinel-refonte/chats/: chat1.md
docs/design/sentinel-refonte/project/screens/: boot.jsx  idv.jsx  (+9 more)
docs/research/: ars_idf_dim.md  atih.md  dim_business_value.md  pmsi_formats_history.md
docs/screenshots/: manifest.json
frontend/: index.html  manual.html
frontend/css/: design-tokens.css  style.css
frontend/js/: app.js  bridge-shim.js  cockpit-view.js  dashboard-live.js  htmlpdf-view.js  preflight-view.js  sentinel-helpers.js  sentinel-views.js  tuto-overlay.js
hooks/: pre-commit
php/: README.md  SovereignClient.php  chart.php  collisions.php  config.php  index.php
php/assets/: style.css
sample/: structure_fondation_vallee.csv  structure_ght_sud_paris.csv
scripts/: analyze_real_data.py  sync_version.py
tests/: conftest.py  test_active_population.py  test_bridge_atih_security.py  test_bridge_export_type_guard.py  test_bridge_security.py  test_bridge_structure_security.py  test_cross_modality.py  test_data_processor.py  test_fastapi_app.py  test_structure.py
tests/frontend/: test_activity_analysis.mjs
tools/: capture_screenshots.py  enrich_guide_pdf.py  generate_guide.py  generate_guide_dev.py  generate_guide_public.py  generate_manual.py
(+1 files in other folders)
